raffia/tests/error/scss/at-rule/forward/with-before-show.snap
---
source: raffia/tests/error.rs
---
error: expect token `;`, but `<ident>` received
  ┌─ with-before-show.scss:1:31
  │
1 │ @forward "other" with ($a: b) show c;
  │                               ^^^^


